--- a/WorkflowMannagementSystem/src/site/app/master/item/item.html
+++ b/WorkflowMannagementSystem/src/site/app/master/item/item.html
@@ -66,7 +66,7 @@
                 <col style="width: 25%">
                 <col style="width: 20%">
                 <tbody>
-                    <tr ng-repeat="item in model.itemList">
+                    <tr ng-repeat="item in model.itemList | orderBy:'indexNo'">
                         <td>{{item.indexNo}}</td>
                         <td>{{item.name}}</td>
                         <td>{{item.unitPrice}}</td>
