--- a/WorkflowMannagementSystem/src/site/app/master/user/user.html
+++ b/WorkflowMannagementSystem/src/site/app/master/user/user.html
@@ -99,7 +99,7 @@
                 <col style="width: 25%">
                 <col style="width: 20%">
                 <tbody>
-                    <tr ng-repeat="user in model.userList">
+                    <tr ng-repeat="user in model.userList | orderBy:'indexNo' ">
                         <td>{{user.indexNo}}</td>
                         <td>{{user.userName}}</td>
                         <td>{{user.type}}</td>
