--- a/WorkflowMannagementSystem/src/site/app/job/admin/complete/departmentSend/admin-department-send.html
+++ b/WorkflowMannagementSystem/src/site/app/job/admin/complete/departmentSend/admin-department-send.html
@@ -2,7 +2,7 @@
     <h4 class="text-center background-md-header"> JOBS</h4>
 </div>
 <div class="col-md-6 background-blue-light">
-    <h4 class="text-center background-md-header"> DEPARTMENT SEND</h4>
+    <h4 class="text-center background-md-header"> ADMIN DEPARTMENT SEND</h4>
 </div>
 <div class="col-md-3 background-blue-dark">
     <h4 class="text-center background-md-header"> JOBS HISTORY</h4>
