--- a/WorkflowMannagementSystem/src/site/app/job/department/pending/unapprove/department-unapprove.html
+++ b/WorkflowMannagementSystem/src/site/app/job/department/pending/unapprove/department-unapprove.html
@@ -72,7 +72,7 @@
         <div class="col-md-12" ng-show="ui.canselReasonText" style="height: 185px;background-color: #cccccc">
             <div style="margin-top: 8px">
                 <label class="control-label" > Reason :</label>
-                <textarea style="font-size: 20px;" rows="3" cols="52" ng-model="model.job.reason"></textarea>
+               <textarea class="form-control" style="font-size: 20px; height: 13vh" ng-model="model.job.reason"></textarea>
             </div>
             <div class="col-md-4" style="margin-top: 12px"></div>
             <div class="col-md-4" style="margin-top: 12px"></div>
@@ -88,7 +88,7 @@
         <div class="col-md-12" ng-show="ui.rejectReasonText" style="height: 185px;background-color: #cccccc">
             <div style="margin-top: 8px">
                 <label class="control-label" > Reason :</label>
-                <textarea style="font-size: 20px;" rows="3" cols="52" ng-model="model.job.reason"></textarea>
+                <textarea class="form-control" style="font-size: 20px; height: 13vh" ng-model="model.job.reason"></textarea>
             </div>
             <div class="col-md-4" style="margin-top: 12px"></div>
             <div class="col-md-4" style="margin-top: 12px"></div>
