--- a/WorkflowMannagementSystem/src/site/app/job/department/complet/unconfirm/department-unconfirm.html
+++ b/WorkflowMannagementSystem/src/site/app/job/department/complet/unconfirm/department-unconfirm.html
@@ -76,12 +76,12 @@
             <div class="hide-area background-light" style="height: calc(100vh - 541px)" ng-hide="model.jobDetailList.length">
                 <h1>PLEASE SELECT JOB TO VIEW JOB DETAILS :(</h1>
             </div>
-            <div class="col-md-6" style="margin-top: 0px"></div>
-            <div class="col-md-6" style="margin-top: 0px">
-                <button type="button" ng-click="ui.reject()" class=" col-md-6 btn btn-warning btn-md " style="border-radius: 0px" ng-click="ui.reject()">
+            <div class="col-md-9" style="margin-top: 0px"></div>
+            <div class="col-md-3" style="margin-top: 0px">
+<!--                <button type="button" ng-click="ui.reject()" class=" col-md-6 btn btn-warning btn-md " style="border-radius: 0px" ng-click="ui.reject()">
                     <span class="glyphicon glyphicon-refresh" aria-hidden="true" ></span> Reject
-                </button>
-                <button type="button" class="col-md-6 btn btn-success btn-md " style="border-radius: 0px" ng-click="ui.approve()">
+                </button>-->
+                <button type="button" class="col-md-12 btn btn-success btn-md" style="border-radius: 0px; margin-top: 15px" ng-click="ui.approve()">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true" ></span> Approve
                 </button>
             </div>
